Separate out Atomic Serialization into its own Invocation Layer #54
Tidy up constraints for secure sockets and ensure anon connections cannot be made. #57

Improve string output from PermissionGrant's, so it's more representative of actual policy file grant syntax #60

Deprecate methods supporting ProxyTrust verification #61